fixing play bar visibility

--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@
   }
 }
 
-#play-bar {
+/* #play-bar {
   position: fixed;
   margin-bottom: 0px;
   margin-left: 0px;
@@ -78,7 +78,7 @@
   align-items: center;
   padding: 10px;
   visibility: visible;
-}
+} */
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
